<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="io.github.rlshep.bjcp2015beerstyles.MainActivity">

    <item android:id="@+id/action_delete"
          android:icon="@drawable/ic_delete_white_24dp"
          android:title="@string/action_delete"
          android:visible="false"/>

    <item android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/action_select_all"
        android:visible="false"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search_hint"
        yourapp:actionViewClass="io.github.rlshep.bjcp2015beerstyles.view.ArrayAdapterSearchView"
        yourapp:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_info"
          android:icon="@drawable/ic_info_outline_white_24dp"
          android:title="@string/action_info"
          yourapp:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/outline_settings_white_36dp"
        android:title="@string/title_activity_settings"
        yourapp:showAsAction="ifRoom"/>
</menu>
