<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="io.github.rlshep.bjcp2015beerstyles.SettingsActivity">

    <include
        android:id="@+id/scbToolbar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

         <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingColor"
                android:text="@string/settings_color"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroupColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">

                <RadioButton
                    android:id="@+id/settings_srm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:buttonTint="@color/abvLineColor"
                    android:text="@string/srm" />

                <RadioButton
                    android:id="@+id/settings_ebc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:buttonTint="@color/abvLineColor"
                    android:text="@string/ebc" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingGravity"
                android:text="@string/settings_gravity"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroupGravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/settings_specific_gravity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:buttonTint="@color/abvLineColor"
                    android:text="@string/settings_specific_gravity" />

                <RadioButton
                    android:id="@+id/settings_plato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:buttonTint="@color/abvLineColor"
                    android:text="@string/settings_plato" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingAlcohol"
                android:text="@string/settings_alcohol"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroupAlcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/settings_abv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:buttonTint="@color/abvLineColor"
                    android:text="@string/settings_volume" />

                <RadioButton
                    android:id="@+id/settings_abw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:buttonTint="@color/abvLineColor"
                    android:text="@string/settings_weight" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingLanguageName"
                android:text="@string/settings_language_name"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/settings_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingGuidelineName"
                android:text="@string/settings_guideline_name"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/settings_guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingThemeName"
                android:text="@string/settings_theme_name"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/settings_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:id="@+id/settingFontSize"
                android:text="@string/settings_font_size"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/settings_fontsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </TableRow>
    </LinearLayout>
</LinearLayout>

