...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sectionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true" />

            <TableLayout
...
                        android:id="@+id/srmBoxEnd1"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp" />
                </TableRow>

                <TextView
                    android:id="@+id/srmText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textIsSelectable="true" />

                <TableRow android:layout_width="fill_parent">
...
